<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <string name="app_name">Popular Movies App</string>
    <string name="action_settings">Settings</string>
    <string name="content_authority" translatable="false">com.example.yash.popularmovies.provider</string>

    <!-- Movie details -->
    <string name="movie_item_btn_favorite_desc">Save to favorites</string>
    <string name="movie_reviews">Reviews</string>
    <string name="message_empty_movie_fragment">Please, choose a movie :)</string>
    <string name="movie_videos">Trailers</string>
    <string name="play_trailer_desc">Play trailer</string>
    <string name="menu_share">Share</string>
    <string name="share_template">Check out \'<xliff:g id="title">%1$s</xliff:g>\' at <xliff:g id="url">%2$s</xliff:g></string>
    <string name="title_share_trailer">Share trailer</string>
    <string name="message_movie_favored">Saved to favorites.</string>

    <!-- Common -->
    <string name="view_empty_message">No matching items</string>
    <string name="view_error_message">This content is not available offline.</string>

    <!-- Browse Movies-->
    <string name="mode_favored">Favorites</string>
    <string name="mode_sort">Sorting</string>
    <string name="mode_sort_popularity">Most popular</string>
    <string name="mode_sort_vote_average">Highest rated</string>
    <string name="mode_sort_vote_count">Most rated</string>

    <string name="movie_image_desc">Movie image</string>
    <string name="movie_poster_desc">Movie poster</string>
    <string name="menu_sort">Sorting</string>
    <string name="menu_sort_popularity">Most popular</string>
    <string name="menu_sort_vote_average">Highest rated</string>
    <string name="menu_sort_vote_count">Most rated</string>
    <string name="menu_sort_favorites">Favored</string>

    <string name="favored_empty_message">You have no favored movies yet.</string>
    <string name="favored_error_message">Loading failed, please try again.</string>

    <string name="placeholder_movie_plot">Some plot</string>

    <string name="movie_overview_header">Overview</string>

    <string name="movie_genre_header">Genres</string>
    <string name="vote_count">8.8</string>
    <string name="vote_count_lable">Vote Count</string>
    <string name="Average_rating_label">Average Rating</string>
    <string name="popularity_label">Popularity</string>
    <string name="similar_label">Similar</string>
</resources>
